--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,8 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    left: 3.5%;
-    top: 35%;
+    left: 5%;
+    top: 45%;
     font-family: 'Bungee Shade', cursive;
     font-size: 40px;
     color: red;
@@ -100,26 +100,66 @@
     font-size: 24px;
     line-height: 1.3;
   }
-
 }
 
-@media (min-width: 481px) and (max-width: 800px) {
+@media (min-width: 481px) and (max-width: 550px) {
   .HalfNavBar {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .NameContainer {
     display: flex;
     flex-direction: column;
     position: fixed;
-    left: 5%;
+    left: 8%;
+    top: 45%;
+    font-family: 'Bungee Shade', cursive;
+    font-size: 40px;
+    color: red;
+  }
+
+  .AboutText {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+}
+
+@media (min-width: 551px) and (max-width: 730px) {
+  .HalfNavBar {
+    font-size: 18px;
+  }
+
+  .NameContainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 7%;
+    top: 40%;
+    font-family: 'Bungee Shade', cursive;
+    font-size: 55px;
+    color: red;
+  }
+
+  .AboutText {
+    font-size: 30px;
+    line-height: 1.3;
+  }
+}
+
+@media (min-width: 731px) and (max-width: 800px) {
+  .NameContainer {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 8%;
     top: 35%;
+    font-size: 70px;
     font-family: 'Bungee Shade', cursive;
     color: red;
   }
 
   .AboutText {
-    font-size: 31px;
+    font-size: 33.5px;
     line-height: 1.3;
   }
 }
