--- a/src/contactMedia.css
+++ b/src/contactMedia.css
@@ -1,14 +1,14 @@
 @media only screen and (min-width: 375px) and (max-width: 413px) {
   .redTop {
     width: 100%;
-    height: 50px;
+    height: 53.5px;
     background-color:red;
     margin-left: 200px;
   }
-  
+
   .whiteTop {
     width: 100%;
-    height: 50px;
+    height: 53.5px;
     background-color: white;
     margin-left: 200px;
   }
@@ -20,59 +20,60 @@
 
   .Instagram {
     position: absolute;
-    top: 69%;
+    top: 69.5%;
     left: 25%;
   }
-  
+
   .LinkedIn {
     position: absolute;
-    top: 69%;
+    top: 69.5%;
     left: 75%;
   }
-  
+
   .BottomNav {
     align-items: center;
     margin-bottom: 7%;
   }
 }
-  
+
 @media only screen and (min-width: 414px) and (max-width: 768px) {
     .redTop {
       width: 100%;
-      height: 60px;
+      height: 53.5px;
       background-color:red;
       margin-left: 225px;
     }
-    
+
     .whiteTop {
       width: 100%;
-      height: 60px;
+      height: 53.5px;
       background-color: white;
       margin-left: 225px;
     }
-  
+
     .contactLogo {
       font-size: 150px;
       align-items: center;
     }
-  
+
     .Instagram {
       position: absolute;
-      top: 72%;
+      top: 69.5%;
       left: 25%;
     }
-    
+
     .LinkedIn {
       position: absolute;
-      top: 72%;
+      top: 69.5%;
       left: 75%;
     }
-    
+
     .BottomNav {
       align-items: center;
+      margin-bottom: 7%;
     }
 }
-  
+
 @media only screen and (min-width: 769px) and (max-width: 1028px) {
     .flagContainer {
         background-color: blue;
@@ -81,39 +82,39 @@
         width: 100%;
         height: 50%;
       }
-      
+
       .flagStars {
         background-color: blue;
         width: 50%;
         height: 400px;
       }
-      
+
       .flagStripes {
         display: flex;
         flex-direction: column;
         height: 100%;
       }
-      
+
       .redTop {
         width: 100%;
         height: 54px;
         background-color:red;
-        margin-left: 500px;
+        margin-left: 400px;
       }
-      
+
       .whiteTop {
         width: 100%;
         height: 54px;
         background-color: white;
-        margin-left: 500px;
+        margin-left: 400px;
       }
-      
+
       .redBottom {
         width: 100%;
         height: 54px;
         background-color:red;
       }
-      
+
       .whiteBottom {
         width: 100%;
         height: 54px;
@@ -130,7 +131,7 @@
         top: 70%;
         left: 25%;
       }
-      
+
       .LinkedIn {
         position: absolute;
         top: 70%;
